--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,4 +22,9 @@ jobs:
       - name: Analyze project source
         run: flutter analyze
       - name: Run tests
-        run: flutter test
+        run: flutter test --coverage
+      - name: Upload code coverage report
+        uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: coverage/lcov.info
