ci: update description

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: control_system
-description: Flutter control system widgets, like on-off controller.
+description: Flutter control system widgets, like on-off (big-bang) controller.
 homepage: https://github.com/FatulM/shamsi_date
 repository: https://github.com/FatulM/shamsi_date
 
